force-app/main/default/objects/Account/fields/Health_Score__c.field-meta.xml
<CustomField>
    <fullName>Health_Score__c</fullName>
    <label>Health Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
    <description>Company-level customer health score (0-100). Rolls up product- and contract-level signals for the single-pane-of-glass view.</description>
    <inlineHelpText>Overall account health, 0 (critical) to 100 (excellent).</inlineHelpText>
</CustomField>