force-app/main/default/objects/Account/fields/NPS__c.field-meta.xml
<CustomField>
    <fullName>NPS__c</fullName>
    <label>Latest NPS Response</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
    <description>Latest NPS/MPS survey response (0-10). Used to trigger the NPS lifecycle CTA/playbook.</description>
    <inlineHelpText>Most recent survey response, 0-10.</inlineHelpText>
</CustomField>