force-app/main/default/objects/Account/fields/NPS_Segment__c.field-meta.xml
<CustomField>
    <fullName>NPS_Segment__c</fullName>
    <label>NPS Segment</label>
    <formula>IF(ISBLANK(NPS__c), "N/A", IF(NPS__c &gt;= 9, "Promoter", IF(NPS__c &gt;= 7, "Passive", "Detractor")))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Text</type>
    <description>Derived NPS segment (Detractor 0-6, Passive 7-8, Promoter 9-10) that selects which playbook the CTA launches.</description>
</CustomField>